--- a/app/index.html
+++ b/app/index.html
@@ -25,13 +25,15 @@
     <!-- inject:js -->
     <script src="/scripts/app.js"></script>
     <script src="/scripts/config/routes.js"></script>
-    <script src="/scripts/factory/redirectWhenLoggedOut.js"></script>
+    <script src="/scripts/config/theme.js"></script>
+    <script src="/scripts/config/url.js"></script>
     <script src="/scripts/services/stateChangeStart.js"></script>
     <script src="/scripts/controllers/auth/AuthController.js"></script>
     <script src="/scripts/controllers/auth/LogoutController.js"></script>
     <script src="/scripts/controllers/auth/SignUpController.js"></script>
-    <script src="/scripts/controllers/layout/LayoutController.js"></script>
     <script src="/scripts/controllers/secured/AccountController.js"></script>
+    <script src="/scripts/controllers/layout/LayoutController.js"></script>
+    <script src="/scripts/factory/redirectWhenLoggedOut.js"></script>
     <!-- endinject -->
   </body>
 </html>
