--- a/app/index.html
+++ b/app/index.html
@@ -28,6 +28,7 @@
     <script src="/scripts/config/theme.js"></script>
     <script src="/scripts/config/url.js"></script>
     <script src="/scripts/factory/redirectWhenLoggedOut.js"></script>
+    <script src="/scripts/services/$dataStorage.js"></script>
     <script src="/scripts/services/$titleSubToolbar.js"></script>
     <script src="/scripts/services/stateChangeStart.js"></script>
     <script src="/scripts/controllers/auth/AuthController.js"></script>
